// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="regularCard"
>
  <div
    className="css-1u8qly9"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-regularCard-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-regularCard"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="cardWithExtendedStyles"
>
  <div
    className="edition-card css-1u8qly9"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithExtendedStyles-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-cardWithExtendedStyles"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        The Card Heading
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        <div>
          Published in New York by Random House
        </div>
        <div>
          Written in English
        </div>
        <div>
          License: Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
        </div>
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <a
          className="chakra-link css-1xdhyk6"
          href="online"
          id="link-online"
          rel={null}
          target={null}
        >
          Read Online
        </a>
        <a
          className="chakra-link css-1xdhyk6"
          href="#url"
          id="link-icon"
          rel={null}
          target={null}
        >
          <svg
            aria-hidden={true}
            className="chakra-icon css-1vgifmd"
            data-file-name="SvgDownload"
            focusable={false}
            id="icon-cardWithExtendedStyles"
            role="img"
            title="download icon"
          />
          Download
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="cardWithNoCTAs"
>
  <div
    className="edition-card css-1u8qly9"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithNoCTAs-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-cardWithNoCTAs"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        The Card Heading
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        <p>
          Published in New York by Random House
        </p>
        <p>
          Written in English
        </p>
        <p>
          Under Creative Commons License
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="cardWithNoContent"
>
  <div
    className="edition-card css-1u8qly9"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithNoContent-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-cardWithNoContent"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        <a
          className="chakra-link css-1xdhyk6"
          href="#edition-link"
          rel={null}
          target={null}
        >
          The Card Heading
        </a>
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <a
          className="chakra-link css-1xdhyk6"
          href="online"
          id="link-online"
          rel={null}
          target={null}
        >
          Read Online
        </a>
        <a
          className="chakra-link css-1xdhyk6"
          href="#url"
          id="link-icon"
          rel={null}
          target={null}
        >
          <svg
            aria-hidden={true}
            className="chakra-icon css-1vgifmd"
            data-file-name="SvgDownload"
            focusable={false}
            id="icon-cardWithNoContent"
            role="img"
            title="download icon"
          />
          Download
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="cardWithNoImage"
>
  <div
    className="edition-card css-1u8qly9"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        <a
          className="chakra-link css-1xdhyk6"
          href="#edition-link"
          rel={null}
          target={null}
        >
          The Card Heading
        </a>
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <a
          className="chakra-link css-1xdhyk6"
          href="online"
          id="link-online"
          rel={null}
          target={null}
        >
          Read Online
        </a>
        <a
          className="chakra-link css-1xdhyk6"
          href="#url"
          id="link-icon"
          rel={null}
          target={null}
        >
          <svg
            aria-hidden={true}
            className="chakra-icon css-1vgifmd"
            data-file-name="SvgDownload"
            focusable={false}
            id="icon-cardWithNoImage"
            role="img"
            title="download icon"
          />
          Download
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="fullclick"
>
  <div
    className="chakra-linkbox css-2zg2m0"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-fullclick-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-fullclick"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        <a
          className="chakra-linkbox__overlay css-1hnz6hu"
          data-testid="ds-cardLinkOverlay"
          href="http://nypl.org"
        >
          The Card Heading
        </a>
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 7`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="cardID"
>
  <div
    className="css-1u8qly9"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithRightActions-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-cardWithRightActions"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button2"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 8`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="chakraProps"
>
  <div
    className="css-2bbtg1"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-chakraProps-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-chakraProps"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1dti2w"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1rn2qcq"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1avkygu"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 9`] = `
<div
  className="css-0"
  data-testid="ds-card"
  id="otherProps"
>
  <div
    className="css-1u8qly9"
    data-cardwrapper={true}
    data-testid="card-testid"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-otherProps-image"
      >
        <img
          alt="Alt text"
          className="css-0"
          id="img-id-otherProps"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1dti2w"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="cardcontent-testid"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="cardaction-testid"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;
